# FragGeneScanRs

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: release.yml
meta/: benchmark.csv  benchmark.gnumeric  benchmark.sh  draw-svg.py  out-to-gff.awk
meta/evaluation/: .gitignore  README.md  annotations.py  rates.py
meta/simulated-reads/: README.md  evaluate.py  hyperfine-output.csv  hyperfine-output.json  hyperfine-output.md
src/: dna.rs  gene.rs  hmm.rs  lib.rs  viterbi.rs
