[package]
name = "frag_gene_scan_rs"
version = "0.1.0"
authors = ["Felix Van der Jeugt <felix.vanderjeugt@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
seq_io = "0.3.1"
anyhow = "1.0"
thiserror = "1.0.25"
rayon = "1.5.1"
